# raytracer-wasm

./: CMakeLists.txt  README.md  compile.sh  index.html  shell_minimal.html
src/: Camera.h  Color.cpp  Color.h  Light.h  Math.h  Object.h  Plane.h  Ray.cpp  Ray.h  Sphere.h  Vec3.cpp  Vec3.h  main.cpp
